# Titu

./: .gitignore  README.md  README_zh.md  comfy.py  example_config.py  main.py  prompt_en.py  prompt_zh.py  pyproject.toml  requirements.txt  util.py
audio/: music.json  sfx_audio.json
image/: background.json  sprite.json
models/: gemini.py  general.py  lint.py  openai.py  reasoning.py  sd.py  vl.py
scripts/: llm_evaluate.py  merge.py  translate_chapter.py  translate_script.py
stage/: __init__.py  audio_generator.py  audio_prompt_generator.py  chapter_generator.py  draft_generator.py  export_game.py  image_generator.py  image_prompt_generator.py  lint_checker.py  script_generator.py  stage.py  theme_manager.py
